k8s/nextcloud/nextcloud-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-route
  namespace: nextcloud
  annotations:
    external-dns.alpha.kubernetes.io/hostname: cloud.oliverilp.ee
    traefik.ingress.kubernetes.io/router.middlewares: nextcloud-nextcloud-hsts@kubernetescrd
spec:
  parentRefs:
    - name: traefik-public-gateway
      namespace: traefik
  hostnames:
    - cloud.oliverilp.ee
  rules:
    - matches:
        - path:
            type: Exact
            value: /.well-known/carddav
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 301
            path:
              type: ReplaceFullPath
              replaceFullPath: /remote.php/dav/
    - matches:
        - path:
            type: Exact
            value: /.well-known/caldav
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 301
            path:
              type: ReplaceFullPath
              replaceFullPath: /remote.php/dav/
    - matches:
        - path:
            type: Exact
            value: /.well-known/webfinger
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /index.php/.well-known/webfinger
      backendRefs:
        - name: nextcloud
          port: 8080
    - matches:
        - path:
            type: Exact
            value: /.well-known/nodeinfo
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /index.php/.well-known/nodeinfo
      backendRefs:
        - name: nextcloud
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /index.php/.well-known
      backendRefs:
        - name: nextcloud
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud
          port: 8080
